@@ -52,6 +52,7 @@ Merovius
 Michael Kopp
 Michael Maddern (madders)
 Michael Vetter (jubalh)
+Michal Belica (beli-sk)
 Michelle Bonk (unixtechie)
 Milan Svoboda (tex)
 Miles (pkordy)
